# things-cli

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
scripts/: e2e-macos.sh  generate-homebrew-formula.sh  package-release.sh
src/: cli.rs  error.rs  lib.rs  main.rs  model.rs  output.rs  things.rs
