[package]
name = "things-cli"
version = "0.2.0"
edition = "2024"
description = "things-cli: public CLI for agents working with the real Things 3 app"
license = "MIT"
homepage = "https://github.com/yogevkr/things-cli"
repository = "https://github.com/yogevkr/things-cli"
default-run = "things-cli"

[[bin]]
name = "things-cli"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.12"
